--- a/index.html
+++ b/index.html
@@ -12,27 +12,55 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 40px;
       background-color: #f0f0f0;
     }
 
-    .container {
+    .outer-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    .inner-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 30px;
+      border: 1px solid #ddd;
+      border-radius: 12px;
+      overflow: hidden;
     }
 
-    .left-column, .right-column {
+    .left-column,
+    .right-column {
       flex: 1;
       min-width: 300px;
+      padding: 20px;
     }
 
-    .left-column iframe {
+    .left-column {
+      border-right: 1px solid #ccc;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .avatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+    }
+
+    iframe {
       width: 100%;
       height: 315px;
       border: none;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     .right-column {
@@ -49,35 +77,43 @@
     }
 
     @media (max-width: 768px) {
-      .left-column iframe {
-        height: 250px;
+      .inner-container {
+        flex-direction: column;
       }
-    }
 
-    @media (max-width: 480px) {
-      .left-column iframe {
-        height: 200px;
+      .left-column {
+        border-right: none;
+        border-bottom: 1px solid #ccc;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <div class="left-column">
-      <!-- 🎥 Videoclip YouTube real -->
-      <iframe 
-        src="https://www.youtube.com/embed/6xUnSVTh8fI" 
-        title="Tame Impala - Let It Happen" 
-        allowfullscreen>
-      </iframe>
-    </div>
+  <div class="outer-container">
+    <div class="inner-container">
 
-    <div class="right-column">
-      <!-- 🖼️ Galerie de imagini -->
-      <img src="https://via.placeholder.com/600x400?text=Imagine+1" alt="Imagine 1">
-      <img src="https://via.placeholder.com/600x400?text=Imagine+2" alt="Imagine 2">
-      <img src="https://via.placeholder.com/600x400?text=Imagine+3" alt="Imagine 3">
+      <!-- Coloana stângă -->
+      <div class="left-column">
+        <!-- 👩‍🦱 Avatar deasupra video -->
+        <img src="https://via.placeholder.com/100x100.png?text=Avatar" alt="Avatar" class="avatar">
+        
+        <!-- 🎥 Video YouTube -->
+        <iframe 
+          src="https://www.youtube.com/embed/6xUnSVTh8fI" 
+          title="Tame Impala - Let It Happen" 
+          allowfullscreen>
+        </iframe>
+      </div>
+
+      <!-- Coloana dreaptă -->
+      <div class="right-column">
+        <!-- 🖼️ Galerie imagini -->
+        <img src="https://via.placeholder.com/600x400?text=Imagine+1" alt="Imagine 1">
+        <img src="https://via.placeholder.com/600x400?text=Imagine+2" alt="Imagine 2">
+        <img src="https://via.placeholder.com/600x400?text=Imagine+3" alt="Imagine 3">
+      </div>
+
     </div>
   </div>
 
