--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     }
 
     .outer-container {
-      max-width: 1200px;
+      max-width: 900px;
       margin: 0 auto;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 30px;
+      background: rgba(255, 255, 255, 0.88);
+      padding: 25px;
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
@@ -38,8 +38,8 @@
     .left-column,
     .right-column {
       flex: 1;
-      min-width: 300px;
-      padding: 20px;
+      min-width: 280px;
+      padding: 15px;
     }
 
     .left-column {
@@ -47,7 +47,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 20px;
+      gap: 15px;
       background-color: #f9f9f9;
     }
 
@@ -56,29 +56,29 @@
     }
 
     .profile-name {
-      font-size: 1.8rem;
+      font-size: 1.6rem;
       font-weight: bold;
       margin-bottom: 10px;
       color: #333;
     }
 
     .avatar {
-      width: 120px;
-      height: 120px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
       object-fit: cover;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     .profile-id {
-      font-size: 1rem;
+      font-size: 0.95rem;
       color: #666;
-      margin-top: 8px;
+      margin-top: 6px;
     }
 
     iframe {
       width: 100%;
-      height: 315px;
+      height: 240px;
       border: none;
       border-radius: 10px;
     }
@@ -86,14 +86,15 @@
     .right-column {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 12px;
       max-height: 700px;
       overflow-y: auto;
       background-color: #fff;
+      align-items: center;
     }
 
     .right-column img {
-      width: 100%;
+      width: 80%;
       border-radius: 10px;
       object-fit: cover;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -130,15 +131,9 @@
         </iframe>
       </div>
 
-      <!-- Coloana dreaptă (galerie scrollabilă) -->
+      <!-- Coloana dreaptă -->
       <div class="right-column">
         <img src="https://xatimg.com/image/6gIKLO4H2Ywg.gif" alt="Imagine 1">
         <img src="https://xatimg.com/image/r2Cdutrn6tdQ.gif" alt="Imagine 2">
         <img src="https://xatimg.com/image/4zjcFYr1J0JU.gif" alt="Imagine 3">
       </div>
-
-    </div>
-  </div>
-
-</body>
-</html>
