--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       height: 100px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 0 15px 4px rgba(255, 105, 180, 0.7);
+      transition: transform 0.3s ease-in-out;
     }
 
     .profile-id {
@@ -91,6 +92,7 @@
       overflow-y: auto;
       background-color: #fff;
       align-items: center;
+      padding-top: 20px;
     }
 
     .right-column img {
@@ -98,6 +100,22 @@
       border-radius: 10px;
       object-fit: cover;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 1s forwards;
+      transition: transform 0.4s ease, filter 0.4s ease;
+    }
+
+    .right-column img:hover {
+      transform: scale(1.05);
+      filter: brightness(1.1) blur(1px);
+    }
+
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     @media (max-width: 768px) {
@@ -133,7 +151,13 @@
 
       <!-- Coloana dreaptă -->
       <div class="right-column">
-        <img src="https://xatimg.com/image/6gIKLO4H2Ywg.gif" alt="Imagine 1">
-        <img src="https://xatimg.com/image/r2Cdutrn6tdQ.gif" alt="Imagine 2">
-        <img src="https://xatimg.com/image/4zjcFYr1J0JU.gif" alt="Imagine 3">
+        <img src="https://xatimg.com/image/6gIKLO4H2Ywg.gif" alt="Imagine 1" style="animation-delay: 0.2s;">
+        <img src="https://xatimg.com/image/r2Cdutrn6tdQ.gif" alt="Imagine 2" style="animation-delay: 0.4s;">
+        <img src="https://xatimg.com/image/4zjcFYr1J0JU.gif" alt="Imagine 3" style="animation-delay: 0.6s;">
       </div>
+
+    </div>
+  </div>
+
+</body>
+</html>
