--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
     body {
       margin: 0;
-      padding: 40px;
+      padding: 30px;
       background: url('https://xatimg.com/image/DjkscBjjrRgc.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Arial', sans-serif;
     }
 
     .outer-container {
-      max-width: 900px;
+      max-width: 750px;
       margin: 0 auto;
-      background: rgba(255, 255, 255, 0.88);
-      padding: 25px;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 20px;
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
@@ -32,14 +32,14 @@
       border: 1px solid #ddd;
       border-radius: 12px;
       overflow: hidden;
-      background: #fff;
+      background: linear-gradient(145deg, #f7d8f0, #e3c8f6);
     }
 
     .left-column,
     .right-column {
       flex: 1;
-      min-width: 280px;
-      padding: 15px;
+      min-width: 240px;
+      padding: 12px;
     }
 
     .left-column {
@@ -47,8 +47,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 15px;
-      background-color: #f9f9f9;
+      gap: 12px;
     }
 
     .profile-info {
@@ -56,30 +55,30 @@
     }
 
     .profile-name {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       font-weight: bold;
-      margin-bottom: 10px;
-      color: #333;
+      margin-bottom: 8px;
+      color: #2d013c;
     }
 
     .avatar {
-      width: 100px;
-      height: 100px;
+      width: 90px;
+      height: 90px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 0 15px 4px rgba(255, 105, 180, 0.7);
+      box-shadow: 0 0 15px 4px rgba(186, 85, 211, 0.8);
       transition: transform 0.3s ease-in-out;
     }
 
     .profile-id {
-      font-size: 0.95rem;
-      color: #666;
-      margin-top: 6px;
+      font-size: 0.85rem;
+      color: #4b1458;
+      margin-top: 4px;
     }
 
     iframe {
       width: 100%;
-      height: 240px;
+      height: 200px;
       border: none;
       border-radius: 10px;
     }
@@ -87,16 +86,15 @@
     .right-column {
       display: flex;
       flex-direction: column;
-      gap: 12px;
-      max-height: 700px;
+      gap: 10px;
+      max-height: 600px;
       overflow-y: auto;
-      background-color: #fff;
       align-items: center;
-      padding-top: 20px;
+      padding-top: 12px;
     }
 
     .right-column img {
-      width: 80%;
+      width: 85%;
       border-radius: 10px;
       object-fit: cover;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
