--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       font-size: 1.2rem;
       font-weight: bold;
       margin-bottom: 8px;
-      color: #2d013c;
+      color: #9b46bc; /* A matching purple color for all the text */
       opacity: 0;
       transform: translateY(10px);
       animation: fadeInUp 1s forwards;
@@ -82,7 +82,6 @@
 
     .profile-name {
       font-size: 1.4rem;
-      color: #9b46bc;
     }
 
     .profile-id {
@@ -92,7 +91,7 @@
 
     .motto {
       font-size: 1.1rem;
-      color: #fff;
+      color: #9b46bc; /* Same color as name and id */
       font-style: italic;
       text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
     }
