--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
     .inner-container {
       display: flex;
       flex-wrap: wrap;
-      border: 1px solid #ddd;
-      border-radius: 12px;
+      border: 1px solid #ddd;  /* Linia de delimitare a containerului */
+      border-radius: 15px;
       overflow: hidden;
       background: none; /* Transparent pe fundal */
+      width: 100%;
+    }
+
+    .inner-container > div {
+      background: none;  /* Transparent pentru tot spațiul */
+      padding: 0;  /* Eliminăm spațiile de interior */
     }
 
     .left-column,
@@ -56,7 +62,7 @@
     }
 
     .left-column {
-      border-right: 1px solid #ccc;
+      border-right: 1px solid #ccc;  /* Linia de delimitare dintre coloane */
       display: flex;
       flex-direction: column;
       align-items: center;
